<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="debari.roberto.appandroid.ActivityDoReservation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_numero_tavoli"
                android:gravity="center"
                android:textSize="20dp"
                ></TextView>
            <EditText
                android:id="@+id/edt_tavoli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Inserisci numero tavoli"></EditText>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_numero_persone"
            android:textSize="29dp"
            android:gravity="center"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_persone"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/radbtn_unapers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_unapers"
                    android:textSize="10dp"
                    ></RadioButton>
                <RadioButton
                    android:textSize="10dp"
                    android:id="@+id/radbtn_duepers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_duepers">
                </RadioButton>
                <RadioButton
                    android:textSize="10dp"
                    android:id="@+id/radbtn_trepers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_trepers"></RadioButton>
                <RadioButton
                    android:textSize="10dp"
                    android:id="@+id/radbtn_quatpers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_quatpers"></RadioButton>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_seggiolone"
                android:textSize="20dp"
                ></TextView>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chk_seggsi"
                android:text="@string/chk_si"
                android:layout_weight="1"
                >
            </CheckBox>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chk_seggno"
                android:text="@string/chk_no"
                android:layout_weight="1"
                >
            </CheckBox>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:id="@+id/layout_invisible"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/txt_numero_seggioloni"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edt_seggiolini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Inserisci numero seggiolini"></EditText>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_data"
        android:hint="GG/MM/YYYY"
        android:layout_weight="1"
        >
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_ora"
        android:layout_weight="1"
        android:hint="HH:MM"
        >
    </EditText>
</LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_prenota"
            android:text="@string/btn_prenota"
            ></Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>