<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/txt_cosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/cosa_vuoi_fare"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_aggiungi_lista"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/green_falce"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="5dp">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lista_spesa"/>
                <TextView
                    android:id="@+id/txt_addtolist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/aggiungi_prodotto_alla_lista_della_spesa"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_aggiungi_appunto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/green_falce"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="5dp">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/note"/>
                <TextView
                    android:id="@+id/txt_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/aggiungi_appunto_nelle_note"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_calcola_calorie"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/green_falce"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/conta_calorie"/>
                <TextView
                    android:id="@+id/txt_contacalorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/conta_calorie_giornaliere"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_cerca_ristorante"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/green_falce"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/parmigiana"/>
                <TextView
                    android:id="@+id/txt_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_cerca_ristorante"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
