<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="debari.roberto.appandroid.BariActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_opera"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                app:cardCornerRadius="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_opera"
                    android:gravity="center"
                    android:textSize="30dp"
                    >
                </TextView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_opera">
                </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_carducci"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                app:cardCornerRadius="15dp"
                android:layout_marginEnd="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_carducci"
                    android:gravity="center"
                    android:textSize="30dp"
                    >
                </TextView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_carducci">
                </ImageView>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginStart="10dp"
                android:id="@+id/card_piccinni28"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                app:cardCornerRadius="15dp"
                android:layout_marginEnd="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_piccinni"
                    android:gravity="center"
                    android:textSize="30dp"
                    >
                </TextView>
                <ImageView
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_piccinni">
                </ImageView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_santa_lucia"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                app:cardCornerRadius="15dp"
                android:layout_marginEnd="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_santalucia"
                    android:gravity="center"
                    android:textSize="30dp"
                    >
                </TextView>
                <ImageView
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_santalucia">
                </ImageView>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
